--- a/src/index.html
+++ b/src/index.html
@@ -1,1 +1,14 @@
-<my-app>loading</my-app>
+<html>
+  <head>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <style>
+      body,html {
+        margin: 0;
+        padding: 0;
+      }
+    </style>
+  </head>
+  <body>
+    <my-app>loading</my-app>
+  </body>
+</html>
